--- a/apps/api/railway.toml
+++ b/apps/api/railway.toml
@@ -4,7 +4,7 @@ buildCommand = "echo 'No explicit build step required for tsx runtime.'"
 
 [deploy]
 preDeployCommand = ["pnpm --filter @astracms/db db:migrate"]
-startCommand = "NODE_ENV=production tsx src/server.ts"
+startCommand = "NODE_ENV=production tsx apps/api/src/server.ts"
 healthcheckPath = "/"
 healthcheckTimeout = 100
 restartPolicyType = "never"
