--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,13 @@
 {
+  "files": [],
+  "references": [
+    { "path": "./apps/api" },
+    { "path": "./apps/cms" },
+    { "path": "./apps/web" },
+    { "path": "./packages/db" },
+    { "path": "./packages/parser" },
+    { "path": "./packages/ui" }
+  ],
   "compilerOptions": {
     "strictNullChecks": true
   }
