feat: fix ralway toml

--- a/package.json
+++ b/package.json
@@ -13,14 +13,12 @@
     "db:generate": "pnpm --filter @astracms/db db:generate",
     "db:studio": "pnpm --filter @astracms/db db:studio",
     "db:push": "pnpm --filter @astracms/db db:push",
-    "build": "turbo build --filter=!web",
+    "build": "turbo build",
     "dev": "turbo dev",
     "lint": "pnpx ultracite@latest check",
     "format": "pnpx ultracite@latest fix",
-    "web:dev": "turbo dev --filter=web",
     "cms:dev": "turbo dev --filter=cms",
     "api:dev": "turbo dev --filter=api",
-    "docs:dev": "turbo dev --filter=docs",
     "test": "turbo test",
     "prepare": "husky"
   },
