fix: install pnpm in cms dockerfile builder stage
The 'pnpm build' command in the CMS Dockerfile's builder stage failed
because pnpm was not found. This commit adds 'RUN npm install -g pnpm'
to the builder stage, ensuring pnpm is available for the build process.

--- a/apps/cms/Dockerfile
+++ b/apps/cms/Dockerfile
@@ -22,6 +22,9 @@ FROM --platform=linux/amd64 node:20-alpine AS builder
 
 WORKDIR /app
 
+# Install pnpm in the builder stage
+RUN npm install -g pnpm
+
 # Copy dependencies from deps stage
 COPY --from=deps /app/node_modules ./node_modules
 COPY --from=deps /app/package.json ./package.json
