feat: fix husky error in railway

--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -11,6 +11,7 @@ COPY packages/db/package.json packages/db/
 COPY packages/parser/package.json packages/parser/
 COPY packages/tsconfig/package.json packages/tsconfig/
 COPY packages/ui/package.json packages/ui/
+COPY turbo.json ./
 
 # Install pnpm
 RUN npm install -g pnpm
