--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,8 @@ services:
       - "9000:9000"
       - "9001:9001"
     environment:
-      MINIO_ROOT_USER: minioadmin
-      MINIO_ROOT_PASSWORD: minioadmin
+      MINIO_ROOT_USER: minioadminastracms
+      MINIO_ROOT_PASSWORD: minioadminastracms
     command: server /data --console-address ":9001"
     volumes:
       - minio_data:/data
