--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -7,14 +7,15 @@
     "env": "dotenv -e .dev.vars"
   },
   "dependencies": {
-    "@hono/zod-validator": "^0.4.3",
     "@astra/db": "workspace:*",
+    "@hono/zod-openapi": "^1.1.5",
+    "@hono/zod-validator": "^0.7.5",
     "@polar-sh/sdk": "^0.41.1",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.4",
     "hono": "^4.10.3",
     "node-html-markdown": "^1.3.0",
-    "zod": "^3.25.76"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20251113.0",
