--- a/turbo.json
+++ b/turbo.json
@@ -9,6 +9,7 @@
       "env": [
         "NODE_ENV",
         "DATABASE_URL",
+        "DIRECT_URL",
         "BETTER_AUTH_URL",
         "BETTER_AUTH_SECRET",
         "GOOGLE_CLIENT_ID",
