--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -17,6 +17,7 @@
     "@neondatabase/serverless": "^1.0.1",
     "@prisma/adapter-neon": "^7.0.0",
     "@prisma/client": "^7.0.0",
+    "dotenv": "^17.2.3",
     "ws": "^8.18.0"
   },
   "devDependencies": {
