feat: update pkg versions

--- a/packages/db/.env.example
+++ b/packages/db/.env.example
@@ -1,2 +1,3 @@
 # DB CONNECTION STRING
 DATABASE_URL=postgresql://useastra:justuseastra@localhost:5432/astra
+DIRECT_URL="postgresql://useastra:justuseastra@localhost:5432/astra
