--- a/apps/cms/package.json
+++ b/apps/cms/package.json
@@ -20,8 +20,8 @@
     "@discordjs/builders": "^1.13.0",
     "@hookform/resolvers": "^5.2.0",
     "@phosphor-icons/react": "^2.1.10",
-    "@polar-sh/better-auth": "^1.5.0",
-    "@polar-sh/sdk": "^0.41.5",
+    "@polar-sh/better-auth": "1.1.0",
+    "@polar-sh/sdk": "0.41.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
@@ -49,7 +49,7 @@
     "@vvo/tzdb": "^6.176.0",
     "ai": "^5.0.93",
     "axios": "^1.12.0",
-    "better-auth": "1.3.9",
+    "better-auth": "1.3.8",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "croner": "^9.1.0",
