--- a/apps/cms/tsconfig.json
+++ b/apps/cms/tsconfig.json
@@ -10,7 +10,8 @@
     "paths": {
       "@/*": ["./src/*"],
       "@astra/ui/*": ["../../packages/ui/src/*"]
-    }
+    },
+    "strictNullChecks": true
   },
   "include": [
     "next-env.d.ts",
