--- a/package.json
+++ b/package.json
@@ -23,20 +23,13 @@
     "docs:dev": "turbo dev --filter=docs",
     "cms:build": "turbo build --filter=cms",
     "web:build": "turbo build --filter=web",
-    "test": "turbo test",
-    "prepare": "husky"
+    "test": "turbo test"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.3.2",
-    "@commitlint/cli": "^19.8.1",
-    "@commitlint/config-conventional": "^19.8.1",
     "@astra/tsconfig": "workspace:*",
-    "husky": "^9.1.7",
-    "prettier": "^3.3.3",
-    "prettier-plugin-tailwindcss": "^0.6.8",
     "turbo": "^2.6.1",
     "typescript": "^5.7.2",
-    "ultracite": "6.0.5"
+    "ultracite": "6.3.6"
   },
   "engines": {
     "node": ">=22"
