--- a/packages/db/tsconfig.json
+++ b/packages/db/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "extends": "@astra/tsconfig/base.json",
   "compilerOptions": {
-    "baseUrl": "."
+    "baseUrl": ".",
+    "strictNullChecks": true
   },
   "include": ["**/*.ts", "**/*.tsx", "**/*.js"],
   "exclude": ["node_modules"]
