--- a/apps/cms/package.json
+++ b/apps/cms/package.json
@@ -8,7 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "@ai-sdk/react": "^2.0.47",
+    "@ai-sdk/openai": "3.0.0-beta.84",
+    "@ai-sdk/react": "3.0.0-beta.134",
     "@astra/db": "workspace:*",
     "@astra/parser": "workspace:*",
     "@astra/ui": "workspace:*",
@@ -16,9 +17,9 @@
     "@aws-sdk/lib-storage": "^3.758.0",
     "@aws-sdk/s3-request-presigner": "^3.758.0",
     "@better-fetch/fetch": "^1.1.18",
-    "@databuddy/sdk": "^2.1.75",
     "@discordjs/builders": "^1.13.0",
     "@hookform/resolvers": "^5.2.0",
+    "@openrouter/ai-sdk-provider": "1.0.0-beta.7",
     "@phosphor-icons/react": "^2.1.10",
     "@polar-sh/better-auth": "1.1.0",
     "@polar-sh/sdk": "0.41.1",
@@ -34,7 +35,7 @@
     "@radix-ui/react-toggle": "^1.1.6",
     "@radix-ui/react-toggle-group": "^1.1.7",
     "@radix-ui/react-tooltip": "^1.1.3",
-    "@react-email/components": "0.0.31",
+    "@react-email/components": "1.0.1",
     "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-query-devtools": "^5.85.5",
     "@tanstack/react-table": "^8.20.5",
@@ -47,7 +48,7 @@
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.35.3",
     "@vvo/tzdb": "^6.176.0",
-    "ai": "^5.0.93",
+    "ai": "6.0.0-beta.133",
     "axios": "^1.12.0",
     "better-auth": "1.3.8",
     "canvas-confetti": "^1.9.3",
