--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "devDependencies": {
     "@astra/tsconfig": "workspace:*",
+    "prettier": "^3.7.4",
     "turbo": "^2.6.1",
     "typescript": "^5.7.2",
     "ultracite": "6.3.6"
