--- a/turbo.json
+++ b/turbo.json
@@ -33,8 +33,7 @@
         "ASTRA_API_URL",
         "QSTASH_TOKEN",
         "REDIS_URL",
-        "REDIS_TOKEN",
-        "AI_GATEWAY_API_KEY"
+        "REDIS_TOKEN"
       ]
     },
     "lint": {
