feat: Rename project to AstraCMS, redesign the web app, and update content.

--- a/apps/cms/public/manifest.json
+++ b/apps/cms/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Marble",
-  "short_name": "Marble",
+  "name": "AstraCMS",
+  "short_name": "AstraCMS",
   "icons": [
     {
       "src": "/web-app-manifest-192x192.png",
