chore: Configure `OPENAI_API_KEY` and `OPENROUTER_API_KEY` for Turbo pass-through and remove OpenAI key from docs example.

--- a/turbo.json
+++ b/turbo.json
@@ -33,7 +33,9 @@
         "ASTRA_API_URL",
         "QSTASH_TOKEN",
         "REDIS_URL",
-        "REDIS_TOKEN"
+        "REDIS_TOKEN",
+        "OPENAI_API_KEY",
+        "OPENROUTER_API_KEY"
       ]
     },
     "lint": {
