--- a/apps/cms/package.json
+++ b/apps/cms/package.json
@@ -8,7 +8,6 @@
     "start": "next start"
   },
   "dependencies": {
-    "@ai-sdk/openai": "3.0.0-beta.84",
     "@ai-sdk/react": "3.0.0-beta.134",
     "@astra/db": "workspace:*",
     "@astra/parser": "workspace:*",
@@ -19,7 +18,7 @@
     "@better-fetch/fetch": "^1.1.18",
     "@discordjs/builders": "^1.13.0",
     "@hookform/resolvers": "^5.2.0",
-    "@openrouter/ai-sdk-provider": "1.0.0-beta.7",
+    "@openrouter/ai-sdk-provider": "^1.4.0",
     "@phosphor-icons/react": "^2.1.10",
     "@polar-sh/better-auth": "1.1.0",
     "@polar-sh/sdk": "0.41.1",
