--- a/apps/cms/package.json
+++ b/apps/cms/package.json
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@ai-sdk/react": "3.0.0-beta.134",
+    "@ai-sdk/react": "3.0.0-beta.135",
     "@astra/db": "workspace:*",
     "@astra/parser": "workspace:*",
     "@astra/ui": "workspace:*",
@@ -18,7 +18,7 @@
     "@better-fetch/fetch": "^1.1.18",
     "@discordjs/builders": "^1.13.0",
     "@hookform/resolvers": "^5.2.0",
-    "@openrouter/ai-sdk-provider": "^1.4.0",
+    "@openrouter/ai-sdk-provider": "1.0.0-beta.7",
     "@phosphor-icons/react": "^2.1.10",
     "@polar-sh/better-auth": "1.1.0",
     "@polar-sh/sdk": "0.41.1",
@@ -47,7 +47,7 @@
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.35.3",
     "@vvo/tzdb": "^6.176.0",
-    "ai": "6.0.0-beta.133",
+    "ai": "6.0.0-beta.134",
     "axios": "^1.12.0",
     "better-auth": "1.3.8",
     "canvas-confetti": "^1.9.3",
