feat: Add new framework integration packages for React, Vue, Svelte, Next, and Nuxt, including core utilities and updated dependencies.

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     },
     "onlyBuiltDependencies": [
       "@biomejs/biome",
+      "@parcel/watcher",
       "@prisma/client",
       "@prisma/engines",
       "@tailwindcss/oxide",
