--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@astracms/astro-loader",
+  "name": "@astracms/core",
   "version": "0.1.0",
-  "description": "Astro Content Collection loader for AstraCMS",
+  "description": "Core API client, types, and schemas for AstraCMS integrations",
   "type": "module",
   "private": false,
   "exports": {
@@ -16,35 +16,28 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup src/index.ts --format esm --dts --external astro",
-    "dev": "tsup src/index.ts --format esm --dts --watch --external astro",
+    "build": "tsup src/index.ts --format esm --dts",
+    "dev": "tsup src/index.ts --format esm --dts --watch",
     "typecheck": "tsc --noEmit"
   },
   "keywords": [
-    "astro",
-    "astro-loader",
-    "content-collections",
-    "cms",
     "astracms",
+    "cms",
+    "headless-cms",
     "blog",
-    "headless-cms"
+    "api-client"
   ],
   "author": "AstraCMS",
   "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/astracms/astracms",
-    "directory": "packages/astro-loader"
-  },
-  "peerDependencies": {
-    "astro": "^5.0.0"
+    "directory": "packages/core"
   },
   "dependencies": {
-    "@astracms/core": "workspace:*",
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "astro": "^5.0.0",
     "tsup": "^8.3.0",
     "typescript": "^5.7.2"
   }
