feat: Introduce v2 API routes for categories, authors, posts, and tags, update docs content and integrations, and refine API proxy origins.

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "wrangler dev",
     "deploy": "wrangler deploy --minify",
-    "env": "dotenv -e .dev.vars"
+    "env": "dotenv -e .dev.vars",
+    "generate:openapi": "tsx scripts/generate-openapi.ts"
   },
   "dependencies": {
     "@astra/db": "workspace:*",
