feat: Refactor API routes and documentation, update client packages, and overhaul CI/CD and release workflows.

--- a/turbo.json
+++ b/turbo.json
@@ -41,6 +41,9 @@
     "lint": {
       "dependsOn": ["^lint"]
     },
+    "typecheck": {
+      "dependsOn": ["^typecheck"]
+    },
     "dev": {
       "dependsOn": ["^db:generate"],
       "cache": false,
