--- a/apps/docs/package.json
+++ b/apps/docs/package.json
@@ -4,9 +4,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "build": "bun run build:pre && next build && bun run build:post",
-    "build:pre": "bun ./scripts/pre-build.ts",
-    "build:post": "bun ./scripts/post-build.ts",
+    "build": "pnpm run build:pre && next build && pnpm run build:post",
+    "build:pre": "tsx ./scripts/pre-build.ts",
+    "build:post": "tsx ./scripts/post-build.ts",
     "dev": "next dev",
     "start": "next start",
     "postinstall": "fumadocs-mdx",
@@ -14,12 +14,12 @@
     "check:spelling": "cspell -c .cspell.jsonc --no-progress --no-summary --no-must-find-files --unique --cache",
     "check:unsafe": "biome check --write --unsafe .",
     "check:write": "biome check --write .",
-    "lint": "fumadocs-mdx && bun ./scripts/lint.ts && biome lint",
+    "lint": "fumadocs-mdx && tsx ./scripts/lint.ts && biome lint",
     "lint:write": "biome lint --write .",
     "lint:unsafe": "biome lint --write --unsafe .",
     "format": "biome format --write .",
     "typegen": "fumadocs-mdx && next typegen",
-    "typecheck": "bun run typegen && tsc --noEmit",
+    "typecheck": "pnpm run typegen && tsc --noEmit",
     "with-env": "dotenv -e ../../.env --"
   },
   "dependencies": {
@@ -84,7 +84,6 @@
     "@cspell/dict-bash": "^4.2.2",
     "@fumadocs/cli": "^1.0.3",
     "@tailwindcss/postcss": "^4.1.17",
-    "@types/bun": "^1.3.3",
     "@types/hast": "^3.0.4",
     "@types/mdx": "^2.0.13",
     "@types/node": "24.10.1",
@@ -103,6 +102,7 @@
     "tailwindcss": "^4.1.17",
     "tinyglobby": "^0.2.15",
     "ts-morph": "^27.0.2",
+    "tsx": "^4.19.0",
     "typescript": "^5.9.3"
   },
   "peerDependencies": {
