--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dev": "turbo dev",
     "lint": "pnpx ultracite@latest check",
     "format": "pnpx ultracite@latest fix",
+    "typecheck": "turbo typecheck",
     "web:dev": "turbo dev --filter=web",
     "cms:dev": "turbo dev --filter=cms",
     "api:dev": "turbo dev --filter=api",
@@ -24,11 +25,16 @@
     "cms:build": "turbo build --filter=cms",
     "web:build": "turbo build --filter=web",
     "docs:build": "turbo build --filter=docs",
-    "test": "turbo test"
+    "test": "turbo test",
+    "changeset": "changeset",
+    "version-packages": "changeset version",
+    "publish-packages": "turbo build --filter='@astracms/*' && changeset publish"
   },
+
   "devDependencies": {
     "@astra/tsconfig": "workspace:*",
     "@biomejs/biome": "^2.3.0",
+    "@changesets/cli": "^2.27.0",
     "prettier": "^3.7.4",
     "turbo": "^2.6.1",
     "typescript": "^5.7.2",
