--- a/packages/nuxt/package.json
+++ b/packages/nuxt/package.json
@@ -38,7 +38,8 @@
     "directory": "packages/nuxt"
   },
   "peerDependencies": {
-    "nuxt": "^3.0.0"
+    "nuxt": "^3.0.0",
+    "vue": "^3.0.0"
   },
   "dependencies": {
     "@astracms/core": "workspace:*",
@@ -47,6 +48,7 @@
   "devDependencies": {
     "@nuxt/module-builder": "^0.8.0",
     "nuxt": "^3.16.0",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "vue": "^3.5.13"
   }
 }
