feat: Reimplement AI agents and tools with a new Mastra system in CMS, removing previous AI modules from both docs and cms apps.

--- a/biome.jsonc
+++ b/biome.jsonc
@@ -8,12 +8,7 @@
     "ultracite/remix"
   ],
   "files": {
-    "includes": [
-      "**",
-      "!packages/ui/src",
-      "!apps/cms/src/hooks/use-mobile.tsx",
-      "!apps/docs"
-    ]
+    "includes": ["**", "!packages/ui/src", "!apps/docs", "!packages/agent"]
   },
   "linter": {
     "rules": {
