--- a/apps/cms/.env.example
+++ b/apps/cms/.env.example
@@ -42,6 +42,11 @@ CLOUDFLARE_S3_ENDPOINT=
 # QSTASH
 QSTASH_TOKEN=
 
-# Redis
+# Upstash Redis (used for rate limiting, caching, and AI agent memory)
 REDIS_URL=
 REDIS_TOKEN=
+
+# AI Agent
+OPENAI_API_KEY=
+OPENROUTER_API_KEY=
+TAVILY_API_KEY=
