--- a/apps/cms/package.json
+++ b/apps/cms/package.json
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@ai-sdk/react": "3.0.0-beta.135",
+    "@ai-sdk/react": "^2.0.107",
     "@astra/db": "workspace:*",
     "@astra/parser": "workspace:*",
     "@astra/ui": "workspace:*",
@@ -18,7 +18,13 @@
     "@better-fetch/fetch": "^1.1.18",
     "@discordjs/builders": "^1.13.0",
     "@hookform/resolvers": "^5.2.0",
-    "@openrouter/ai-sdk-provider": "1.0.0-beta.7",
+    "@libsql/client": "^0.15.15",
+    "@mastra/ai-sdk": "^0.3.2",
+    "@mastra/core": "^0.24.6",
+    "@mastra/libsql": "^0.16.3",
+    "@mastra/loggers": "^0.10.19",
+    "@mastra/memory": "^0.15.12",
+    "@mastra/upstash": "^0.15.9",
     "@phosphor-icons/react": "^2.1.10",
     "@polar-sh/better-auth": "1.1.0",
     "@polar-sh/sdk": "0.41.1",
@@ -39,6 +45,7 @@
     "@tanstack/react-query-devtools": "^5.85.5",
     "@tanstack/react-table": "^8.20.5",
     "@tanstack/react-virtual": "^3.13.12",
+    "@tavily/core": "^0.5.14",
     "@tiptap/core": "^2.11.2",
     "@tiptap/extension-text-align": "^2.11.2",
     "@tiptap/extension-underline": "^2.11.2",
@@ -47,7 +54,7 @@
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.35.3",
     "@vvo/tzdb": "^6.176.0",
-    "ai": "6.0.0-beta.134",
+    "ai": "^5.0.0",
     "axios": "^1.12.0",
     "better-auth": "1.3.8",
     "canvas-confetti": "^1.9.3",
@@ -58,6 +65,7 @@
     "gray-matter": "^4.0.3",
     "input-otp": "^1.4.2",
     "lowlight": "^3.3.0",
+    "mastra": "^0.18.6",
     "motion": "^11.15.0",
     "nanoid": "^5.0.9",
     "next": "16.0.7",
