feat: Introduce AI credit system, replace Polar with Creem for subscriptions, and update UI/assets

--- a/apps/cms/tsconfig.json
+++ b/apps/cms/tsconfig.json
@@ -11,7 +11,10 @@
       "@/*": ["./src/*"],
       "@astra/ui/*": ["../../packages/ui/src/*"]
     },
-    "strictNullChecks": true
+    "strictNullChecks": true,
+    "declaration": false,
+    "declarationMap": false,
+    "composite": false
   },
   "include": [
     "next-env.d.ts",
