--- a/turbo.json
+++ b/turbo.json
@@ -23,12 +23,12 @@
         "CLOUDFLARE_TOKEN",
         "CLOUDFLARE_S3_ENDPOINT",
         "CLOUDFLARE_PUBLIC_URL",
-        "POLAR_ACCESS_TOKEN",
-        "POLAR_WEBHOOK_SECRET",
-        "POLAR_HOBBY_PRODUCT_ID",
-        "POLAR_PRO_PRODUCT_ID",
-        "POLAR_TEAM_PRODUCT_ID",
-        "POLAR_SUCCESS_URL",
+        "CREEM_API_KEY",
+        "CREEM_WEBHOOK_SECRET",
+        "NEXT_PUBLIC_CREEM_HOBBY_PRODUCT_ID",
+        "NEXT_PUBLIC_CREEM_PRO_PRODUCT_ID",
+        "NEXT_PUBLIC_CREEM_TEAM_PRODUCT_ID",
+        "CREEM_SUCCESS_URL",
         "ASTRA_WORKSPACE_KEY",
         "ASTRA_API_URL",
         "QSTASH_TOKEN",
