--- a/apps/cms/.env.example
+++ b/apps/cms/.env.example
@@ -16,15 +16,15 @@ GITHUB_SECRET=
 # RESEND
 RESEND_API_KEY=
 
-# POLAR
-POLAR_ACCESS_TOKEN=
-POLAR_WEBHOOK_SECRET=
-POLAR_SUCCESS_URL=http://localhost:3000/api/polar/success?checkout_id={CHECKOUT_ID}
+# CREEM
+CREEM_API_KEY=
+CREEM_WEBHOOK_SECRET=
+CREEM_SUCCESS_URL=http://localhost:3000/success
 
-# POLAR PRODUCT ID's
-POLAR_HOBBY_PRODUCT_ID=
-POLAR_PRO_PRODUCT_ID=
-POLAR_TEAM_PRODUCT_ID=
+# CREEM PRODUCT IDs
+NEXT_PUBLIC_CREEM_HOBBY_PRODUCT_ID=
+NEXT_PUBLIC_CREEM_PRO_PRODUCT_ID=
+NEXT_PUBLIC_CREEM_ENTERPRISE_PRODUCT_ID=
 
 # NEXT
 NEXT_PUBLIC_APP_URL=http://localhost:3000
