--- a/apps/cms/package.json
+++ b/apps/cms/package.json
@@ -15,7 +15,8 @@
     "@aws-sdk/client-s3": "^3.758.0",
     "@aws-sdk/lib-storage": "^3.758.0",
     "@aws-sdk/s3-request-presigner": "^3.758.0",
-    "@better-fetch/fetch": "^1.1.18",
+    "@better-fetch/fetch": "1.1.18",
+    "@creem_io/better-auth": "^0.0.12",
     "@discordjs/builders": "^1.13.0",
     "@hookform/resolvers": "^5.2.0",
     "@libsql/client": "^0.15.15",
@@ -26,8 +27,6 @@
     "@mastra/memory": "^0.15.12",
     "@mastra/upstash": "^0.15.9",
     "@phosphor-icons/react": "^2.1.10",
-    "@polar-sh/better-auth": "1.1.0",
-    "@polar-sh/sdk": "0.41.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.2",
     "@radix-ui/react-dialog": "^1.1.4",
@@ -56,7 +55,7 @@
     "@vvo/tzdb": "^6.176.0",
     "ai": "^5.0.0",
     "axios": "^1.12.0",
-    "better-auth": "1.3.8",
+    "better-auth": "1.4.5",
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.0",
     "croner": "^9.1.0",
