--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@astracms/astro-loader": "^0.1.1",
+    "@astracms/core": "^0.1.0",
     "@astrojs/mdx": "^4.3.8",
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.6.0",
