feat: Add video support to the CMS editor, display content metrics on the dashboard, and enable category exclusion in the Astro loader.

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,8 +9,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astracms/astro-loader": "^0.1.1",
-    "@astracms/core": "^0.1.0",
+    "@astracms/astro-loader": "workspace:*",
+    "@astracms/core": "workspace:*",
     "@astrojs/mdx": "^4.3.8",
     "@astrojs/rss": "^4.0.12",
     "@astrojs/sitemap": "^3.6.0",
