fix: Resolve CI typecheck failures by building dependencies first and making env var optional

--- a/turbo.json
+++ b/turbo.json
@@ -45,7 +45,7 @@
       "dependsOn": ["^lint"]
     },
     "typecheck": {
-      "dependsOn": ["^typecheck"]
+      "dependsOn": ["^build", "^typecheck"]
     },
     "dev": {
       "dependsOn": ["^db:generate"],
