feat: Configure changesets for automated CHANGELOG.md generation
- Remove apps from changeset ignore list to enable changelog generation
- Ensure all apps have 'private: true' to prevent npm publishing
- Update release workflow to auto-create version PRs
- Add changeset:add helper command for easy changeset creation
- Add comprehensive documentation for the workflow

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -17,14 +17,5 @@
   "access": "public",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
-  "ignore": [
-    "@astra/db",
-    "@astra/ui",
-    "@astra/parser",
-    "@astra/tsconfig",
-    "cms",
-    "web",
-    "api",
-    "docs"
-  ]
+  "ignore": ["@astra/db", "@astra/ui", "@astra/parser", "@astra/tsconfig"]
 }
