fix: Remove ignore list from changesets config to allow app changelogs
Changesets requires that if a package depends on an ignored package,
it must also be ignored. Since apps depend on @astra/* packages,
we removed the ignore list entirely. All packages will get CHANGELOGs
but only @astracms/* packages will be published (others are private).

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -16,6 +16,5 @@
   ],
   "access": "public",
   "baseBranch": "main",
-  "updateInternalDependencies": "patch",
-  "ignore": ["@astra/db", "@astra/ui", "@astra/parser", "@astra/tsconfig"]
+  "updateInternalDependencies": "patch"
 }
