--- a/packages/next/package.json
+++ b/packages/next/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@astracms/next",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Next.js utilities for AstraCMS with RSC and caching support",
   "type": "module",
   "private": false,
@@ -36,11 +36,7 @@
   ],
   "author": "AstraCMS",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/astracms/astracms",
-    "directory": "packages/next"
-  },
+  "homepage": "https://docs.astracms.dev",
   "peerDependencies": {
     "next": "^14.0.0 || ^15.0.0",
     "react": "^18.0.0 || ^19.0.0"
