--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@astracms/react",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "React hooks for AstraCMS data fetching",
   "type": "module",
   "private": false,
@@ -30,11 +30,7 @@
   ],
   "author": "AstraCMS",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/astracms/astracms",
-    "directory": "packages/react"
-  },
+  "homepage": "https://docs.astracms.dev",
   "peerDependencies": {
     "react": "^18.0.0 || ^19.0.0"
   },
