--- a/apps/cms/package.json
+++ b/apps/cms/package.json
@@ -51,7 +51,7 @@
     "@tiptap/extension-underline": "^2.11.2",
     "@tiptap/react": "^2.11.2",
     "@upstash/qstash": "^2.8.2",
-    "@upstash/ratelimit": "^2.0.5",
+    "@upstash/ratelimit": "^2.0.7",
     "@upstash/redis": "^1.35.3",
     "@vvo/tzdb": "^6.176.0",
     "ai": "^5.0.0",
@@ -61,9 +61,11 @@
     "class-variance-authority": "^0.7.0",
     "croner": "^9.1.0",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.3.1",
     "dotted-map": "^2.2.3",
     "gray-matter": "^4.0.3",
     "input-otp": "^1.4.2",
+    "jsdom": "^27.3.0",
     "lowlight": "^3.3.0",
     "mastra": "^0.18.6",
     "motion": "^11.15.0",
@@ -73,6 +75,7 @@
     "node-html-markdown": "^1.3.0",
     "novel": "^1.0.2",
     "nuqs": "^2.7.3",
+    "p-retry": "^7.1.1",
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "react-dropzone": "^14.3.8",
@@ -94,6 +97,8 @@
     "@tailwindcss/postcss": "^4.1.12",
     "@tailwindcss/typography": "^0.5.15",
     "@types/canvas-confetti": "^1.9.0",
+    "@types/dompurify": "^3.2.0",
+    "@types/jsdom": "^27.0.0",
     "@types/node": "^20",
     "@types/react": "19.2.0",
     "@types/react-dom": "19.2.0",
