feat: Add AI credit management features, including credit limit banner and consumption tracking, and update subscription plans to include AI credits

--- a/turbo.json
+++ b/turbo.json
@@ -17,6 +17,7 @@
         "GITHUB_ID",
         "GITHUB_SECRET",
         "RESEND_API_KEY",
+        "RESEND_AUDIENCE_ID",
         "CLOUDFLARE_ACCESS_KEY_ID",
         "CLOUDFLARE_SECRET_ACCESS_KEY",
         "CLOUDFLARE_BUCKET_NAME",
