--- a/apps/cms/package.json
+++ b/apps/cms/package.json
@@ -54,6 +54,7 @@
     "@upstash/ratelimit": "^2.0.7",
     "@upstash/redis": "^1.35.3",
     "@vvo/tzdb": "^6.176.0",
+    "@xyflow/react": "^12.10.0",
     "ai": "^5.0.0",
     "axios": "^1.12.0",
     "better-auth": "1.4.5",
